--- a/game.html
+++ b/game.html
@@ -17,15 +17,28 @@
     <div class="title">
         <h1>Ahorcado</h1>
     </div>
-    <div>
+
+    <div class="container-game">
+    <div class="horca">
+        <div class="uno">1</div>
+        <div class="dos">2</div>
+        <div class="tres">3</div>
+        <div class="cuatro">4</div>
+    </div>
+    </div>
+    <div class="btnStart">
+        <button id="startButton">Comenzar</button>
+       </div>
+    <script src="/index.js"></script>
+    <!-- <div>
          <canvas id="canvas"></canvas>
         <div id="usedLetters"></div>
     </div>
     <div id="wordContainer"></div>
     <div class="btnStart">
      <button id="startButton">Comenzar</button>
-    </div>
-    <script src="/index.js"></script>
+    </div> -->
+    
 <!--<main>
         <div class="letras">
        <div class=""><button>A</button></div>
